bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: docker-postgress-project
    labels:
        com.docker.compose.project: docker-postgress-project
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: docker-postgress-project
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: docker-postgress-project
                com.docker.compose.service: backend
                com.docker.compose.network.assinet: "true"
        spec:
            restartPolicy: Always
            containers:
                - name: backend-api
                  image: docker-postgress-project-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-3000
                      containerPort: 3000
