bridge/base/database-expose.yaml
#! database-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: database
    namespace: docker-postgress-project
    labels:
        com.docker.compose.project: docker-postgress-project
        com.docker.compose.service: database
spec:
    selector:
        com.docker.compose.project: docker-postgress-project
        com.docker.compose.service: database
    ports:
        - name: database-5432
          port: 5432
          targetPort: database-5432
